Fixed border dash on small screens

--- a/shared/components/FutureEvents/index.scss
+++ b/shared/components/FutureEvents/index.scss
@@ -100,6 +100,16 @@
   .FutureEvents {
     &__events-container {
      flex-wrap: wrap;
+      &-event {
+        &:nth-child(2) {
+          border-left: none;
+          border-right: none;
+        }
+
+        &:last-child {
+          border-right: none;
+        }
+      }
     }
   }
 }
@@ -111,6 +121,21 @@
 
     &:nth-child(2) {
       border-left: none;
+    }
+  }
+
+   .FutureEvents {
+    &__events-container {
+      &-event {
+        &:nth-child(2) {
+          border-left: none;
+          border-right: none;
+        }
+
+        &:last-child {
+          border-right: none;
+        }
+      }
     }
   }
 }
